# Starfinder

./: .gitmodules  Starfinder.cabal  stack.yaml
app/: App.hs  Main.hs
app/App/: Calculated.hs  FilterCard.hs  Home.hs  Meta.hs  Record.hs  Unified.hs
app/App/Banana/: Calculated.hs  Meta.hs  Record.hs
app/App/Threepenny/: Calculated.hs  Core.hs  Deck.hs  FilterCard.hs  Filtering.hs  Home.hs  Meta.hs  Tagging.hs  Test.hs  Universal.hs  Weapons.hs
app/App/Threepenny/Renderer/: Cards.hs  Core.hs  Deck.hs  FilterCard.hs  SingleCard.hs
app/App/Threepenny/Renderer/Core/: Internal.hs
app/App/Threepenny/Test/: Clear.hs  Collector.hs  FileRead.hs  Multi.hs  Obscura.hs  Res.hs  Search.hs  ShowCard.hs
res/: weapon.html  weapon.js
res/css/: style.css  weapon.css
src/: Sheet.hs
src/Data/Morphism/Dimorph/: Quasi.hs
src/Sheet/: Calculated.hs  Common.hs  Itemized.hs  Meta.hs  Skills.hs
src/Util/: Helper.hs
src/dump/: App.hs  Main.hs
src/dump/App/: Home.hs  Mode.hs
src/dump/Reactive/: Util.hs
