name:                Starfinder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Starfinder#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
    Util
    Util.Helper
    Util.Advanced
    Util.Conditional
    Util.List
    Util.List.Advanced
    Util.Generic
    Util.Tuple.Rotate
    Util.String
    Util.Tuple
    Util.Tuple.Apply
    Util.TH
    -- Data.Invotomorph
    -- Data.Dimorph
    -- Data.Morphism
    Sheet
    Sheet.Itemized
    Sheet.Calculated
    Sheet.Common
    Sheet.Meta
  build-depends:
        base >=4.7 && <5,
        array >=0.5,
        safecopy >=0.8,
        containers >= 0.5,
        split >=0.2,
        extra,
        parsec
  default-language:    Haskell2010

executable sfgui
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules: 
    Data.Stringent
    Reactive.Banana.WX
    Reactive.StaticDynamic
    Reactive.Tidings
    Reactive.Util
    Util
    Util.Advanced
    Util.Applicative
    Util.Conditional
    Util.Generic
    Util.Helper
    Util.List
    Util.List.Advanced
    Util.String
    Util.TH
    Util.Tuple
    Util.Tuple.Apply
    Util.Tuple.Rotate
    Widgets.Cast
    Widgets.Core
    Widgets.Core.FRP
    Widgets.Core.UI
    Widgets.Group
    Widgets.Links
    Widgets.MonoSelect
    Widgets.MultiSelect
    Widgets.Obscura
    Widgets.Phantom
    Widgets.Radio
    Widgets.Ranger
    Widgets.Table
    Widgets.Text
    Widgets.Tower
  other-extensions:
        CPP,
        DeriveDataTypeable,
        FlexibleContexts,
        FlexibleInstances,
        GeneralizedNewtypeDeriving,
        ImpredicativeTypes,
        MultiParamTypeClasses,
        NamedFieldPuns,
        Rank2Types,
        RecordWildCards,
        TemplateHaskell,
        TupleSections,
        TypeFamilies,
        UndecidableInstances
  build-depends:
        base >=4.7,
        containers >=0.5,
        split >=0.2,
        template-haskell >=2.11.1.0,
        unix >=2.7,
        mtl >=2.1,
        bifunctors >=5,
        safecopy >=0.8,
        reform >=0.2,
        transformers >=0.3,
        aeson >=0.7,
        vector >=0.10,
        array >=0.5,
        wx >=0.92 && <0.93,
        wxc >=0.92 && <0.93,
        wxcore >=0.92 && <0.93,
        wxdirect >=0.92 && <0.93,
        reactive-banana >= 1.1 && <1.2,
        containers >=0.5 && <0.6,
        parsec,
        primitive,
        Starfinder
  default-language:    Haskell2010

test-suite Starfinder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Starfinder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/archaephyrryx/Starfinder


