name:                Starfinder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Starfinder#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules: Lib
      Sheet
      Sheet.Itemized
      Sheet.Calculated
      Sheet.Common
      Sheet.Meta
      Sheet.Skills
  build-depends:
    base >=4.7 && <5,
    lens, 
    array >=0.5,
    safecopy >=0.8,
    containers >= 0.5,
    template-haskell >=2.11.1.0,
    split >=0.2,
    futility >= 0.1,
    data-default >= 0.7,
    extra,
    parsec
  default-language:    Haskell2010

executable sfgui
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules: 
    App.Banana.Calculated
    App.Banana.Meta
    App.Banana.Record
    App.Threepenny.Weapons
    App.Unified
  other-extensions:
        CPP,
        DeriveDataTypeable,
        FlexibleContexts,
        FlexibleInstances,
        GeneralizedNewtypeDeriving,
        ImpredicativeTypes,
        MultiParamTypeClasses,
        NamedFieldPuns,
        Rank2Types,
        RecordWildCards,
        TemplateHaskell,
        TupleSections,
        TypeFamilies,
        UndecidableInstances
  build-depends:
        base >=4.7,
        lens, 
        containers >=0.5,
        split >=0.2,
        template-haskell >=2.11.1.0,
        unix >=2.7,
        mtl >=2.1,
        bifunctors >=5,
        safecopy >=0.8,
        reform >=0.2,
        transformers >=0.3,
        aeson >=0.7,
        vector >=0.10,
        array >=0.5,
        wx >=0.92 && <0.93,
        wxc >=0.92 && <0.93,
        wxcore >=0.92 && <0.93,
        wxdirect >=0.92 && <0.93,
        reactive-banana >= 1.1 && <1.2,
        containers >=0.5 && <0.6,
        parsec,
        primitive,
        futility >= 0.1,
        frp-widgets-banana >= 0.1,
        frp-widgets-threepenny >= 0.1,
        Starfinder
  default-language:    Haskell2010

test-suite Starfinder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Starfinder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/archaephyrryx/Starfinder


